# spiral-hodge

./: .gitignore  README.md  pyproject.toml  requirements.txt  spiral_hodge.py  spiral_hodge_report.py
data/: hltd_affordance_prompt_suite.jsonl  hltd_identity_counterfactual_probe_suite.jsonl  hltd_probe_labels.json  hltd_prompt_suite.jsonl  hltd_semantic_targets.json
docs/: hltd_all_interior_position_gate.md  hltd_branch_heatmap.md  hltd_branch_hodge.md  hltd_closed_loop_gate.md  hltd_counterfactual_identity_probe.md  hltd_dissociation_gate.md  hltd_matched_betti_causal_gate.md  hltd_next_gate_steering_sweep.md  hltd_prompt_family_observations.md  hltd_reverse_exception_localization.md  hltd_robustness_gate.md  hltd_steering_gate.md  hltd_topology_filtration.md  research_notes.md
scripts/: plan_hltd_branch_band_runs.py  plot_hltd_branch_band_results.py  plot_hltd_branch_hodge.py  plot_hltd_closed_loop.py  plot_hltd_counterfactual_probe_surface.py  plot_hltd_matched_betti_causal.py  plot_hltd_position_gate.py  plot_hltd_reverse_specificity.py  plot_hltd_target_overlap_robustness.py  plot_hltd_target_sensitivity.py  plot_hltd_topology_filtration.py  run_hltd_branch_heatmap.py  run_hltd_closed_loop.py  run_hltd_probe_gate.py  run_hltd_prompt_suite.py  run_hltd_steering.py  run_hltd_steering_fast_suite.py  run_hltd_steering_suite.py  run_hltd_topology_filtration.py  summarize_hltd_branch_band_runs.py  summarize_hltd_branch_hodge.py  summarize_hltd_closed_loop.py  summarize_hltd_position_gate.py  summarize_hltd_steering.py  summarize_hltd_suite.py
tests/: __init__.py  (+23 more)
(+7 files in other folders)
